@@ -8,13 +8,13 @@ DIST SQL-Translator-0.11016.tar.gz 421466 SHA256 be7e63537ec13c2e5f6b82701878ae5
 EBUILD SQL-Translator-0.110.120.ebuild 1071 SHA256 e42d890cabcc90ea161c0a75b36e98d272dd4791ac71f90cb06009054be90366 SHA512 1b6ead5b7c0701f5c0ee06c26e9ab92c4085edbe5520d8f3d6ae512280377463416d3efa6ab4a9c4b3b39f252bc29fc5ee237d680cbeb9157a5c8021325d1bf3 WHIRLPOOL 04036127b45e5fd60c221e16f80ee31939b3b999ea9f5a387ae0eb3341a029e7c7a28dff2ed6e71f605fd88f3e8263961485d14a77de3ed68d99b7ca650cedf3
 EBUILD SQL-Translator-0.110.130.ebuild 1068 SHA256 913d42418dc495e8887b3d716467927c15596b72ecea5e1d6a713b71e59de9d7 SHA512 41cd98f8456373db361a602f6d24e9ccc0489ea6c1456eac8ee7c6285ada01f2ae9487c4858e6137b4f851922745b67ac8c7fede4122fd21810d260d8ea35b0c WHIRLPOOL 4ccccd78c51ae04fbd8345855a6b7e7031ddb6dfee673ac043d04754fed3d5471009a787bf31c9d5f27b7130dc17052be266070c8f17206b52eebee56a561c33
 EBUILD SQL-Translator-0.110.150.ebuild 996 SHA256 bfc02f39c98c6b20431db961afca90d455947e5107ae13968bcc2ec345a6d5b5 SHA512 d9411c0f070be0a206a4851bed870cd3bd7c385ff846839f2d48b5f674370c4a0c2cea81ff19fc9dc079fa9aea8a05ea4f592ab479caad0b482c45ea9d3e3b0f WHIRLPOOL 42310e0c8e3fd9416daff2bd029c879773abf4a1db3077426b5d7ce728abad32541636c3a0e6be6536748ba911719c6b9c220d58b35c409b1b657a2b108955ec
-EBUILD SQL-Translator-0.110.160.ebuild 996 SHA256 f6331bf7ab18d0331a3ea4990a04f28a9bbcad8deb1fd006f9f3bcb01ac45f1c SHA512 bc256be5af686e5192cf726a10e9803b75da74f1a6cffc3a01274fa862c689ed6702cac3af6283f8be9fbd73f5df92f8fa2ac81ab1fc3bd3089998cb30098bc8 WHIRLPOOL 235519896cf4c7e70d2c635fe39607311f0f15720aefe53e732dcb39afd7fc19c3055a6305c96fbd31c164c508e84a0dfd368d585dbed270e35a246620b4168a
-MISC ChangeLog 4374 SHA256 31ac84bb35ef6ee7be1a9d5c9cca6356d297571c278e069ab85398ae1a2b7221 SHA512 1bd9e5c645f0c4eb75280db449192ad5a986d64ea0868b6737166b2d4abb868e91c56b1c8fdef8a1c7801a7279fbc63d282ecdb389ab6cffb675905ce8b630b6 WHIRLPOOL c0abb935b65a636909edce8285f1a7b3cb128664dedef4402cb27472c597fff2ac7ce5dc3c7e66b6d63eccf5087987c3407a48de58e8ae7ae93d1cd011ce757a
+EBUILD SQL-Translator-0.110.160.ebuild 1004 SHA256 650c71828c0d4ac9793e939db44a9bfcaeb1b17bf0a6f590ce72a37587bd4b2d SHA512 e2893f72434ac573b38d4bb0a8773348fc7678ec4f157c32788006091093004584937b0012df7c05b55c20b65f881da2749f4e0618881fa7e68bc4c994715047 WHIRLPOOL 8ccb70ff9b76cc2911350898318c060c9da309774063fd54de89c92729954dbe51e0bed93334453b4008ba38a5ca4d69cb427a5277a7ce1751e9aee6b46692e8
+MISC ChangeLog 4500 SHA256 fc3da5c38b391c76ba63e1cc72b0c4fb13c0b841fa3a12a12124aff202aba345 SHA512 b913e00e9e669261887f75242acde105d32d67569648c4222ace70c58fb7d528e2a2686ecc6b2012ee164f488fd4f72e4630ee700f17d25050d841a341d4b32b WHIRLPOOL 87661cf2deea5ffc24f4dda80278d29f28d1849c2b57fdde3959937dc05a01fe742265abde17c74c63c5ce5d39ed2705f4f835bc42bd35109b1f92cf4ae063d0
 MISC metadata.xml 6505 SHA256 293929a6766bf00a10e7caad424ad7bd4545b4d2279d506637739abc680aabe7 SHA512 ac664f919d3448f2911a2d06f9bf7da8f8034c55ca612e787df942d62a3025970b511ea333dc247b1cb766268e64ac63b37c389f1033c6c90c22455de57c26f0 WHIRLPOOL 98e37d9c95ba013336e67afc0636501734cd8be94179bfabf1e8bae6aa5736f89b42db4288eca1cd602cf447d7feb84b56ea1a7d4983b5715633921c8f974d88
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCVY8oACgkQV3J2n04EauzfIwCgrsVMgYPPYDnXyXRl++pczV+O
-ANIAni9zgMJk8RHOx2xtBI5CMdmhQgFm
-=4hV3
+iEYEAREIAAYFAlCf8SUACgkQV3J2n04EauxWaQCeMQrWW8pv72NIvaoLRwxbLNc5
+1C8AoMPMsmS/Ni29fNTd7eqYZjEp1wPA
+=hr2S
 -----END PGP SIGNATURE-----
