@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/psad
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.56 2011/07/20 15:40:19 pacho Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.57 2012/11/11 15:00:31 blueness Exp $
+
+  11 Nov 2012; Anthony G. Basile <blueness@gentoo.org> metadata.xml:
+  Dropping to maintainer-needed, not sure why it belonged to hardened
 
   20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, bug #34864
@@ -244,4 +247,3 @@
   Port Scanning Attack Detection daemon. This is a dependency of Bastille, and
   probably can be used standalone as well. Much thanks to Battoussai (Bryan
   Stine <admin@kentonet.net>) for this.
-
