@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/SQL-Translator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.30 2012/11/03 18:34:49 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.31 2012/11/11 18:40:36 tove Exp $
+
+  11 Nov 2012; Torsten Veller <tove@gentoo.org>
+  SQL-Translator-0.110.160.ebuild:
+  Depends on Moo-1.0.3 or later (#442626)
 
 *SQL-Translator-0.110.160 (03 Nov 2012)
 
